--- a/aqMS_SI.Rmd
+++ b/aqMS_SI.Rmd
@@ -3,15 +3,15 @@ title: "Fish aggregation at ocean aquaculture can augment wild populations and l
 subtitle: "Supplemental Information"
 author: "Jessica L. Couture, Darcy Bradley, Benjamin S. Halpern, Steven D. Gaines"
 output:
+  pdf_document: default
+  word_document: default
   html_document:
     code_folding: hide
     fig_width: 12
-  word_document: default
-  pdf_document: default
 ---
 
 
-```{r warning=FALSE,message=FALSE}
+```{r warning=FALSE,message=FALSE,echo=FALSE}
 knitr::opts_chunk$set(echo = FALSE,warning=FALSE,message=FALSE)
 
 library(tidyverse)
@@ -21,12 +21,12 @@ library(knitr)
 
 ```
 
-This document includes the supplemental information for "Fish aggregation at ocean aquaculture can augment wild populations and local fishing". 
+This document includes the supplemental information for "Fish aggregation at ocean aquaculture can augment wild populations and local fisheries". 
 
 
 ## Figure S1
 
-Equilibrium biomass differences given different levels of attraction to farms with farms of varying total area coverage for (A) one large contiguous farm and (B) total farm area broken up into smaller separate farms. Catch biomass difference is calculated as the difference between catch biomass with the farm scenario and a scenario with no farm.
+**Equilibrium biomass** differences given different levels of attraction to farms with farms of varying total area coverage for (A) one large contiguous farm and (B) total farm area broken up into smaller separate farms. Catch biomass difference is calculated as the difference between catch biomass with the farm scenario and a scenario with no farm.
 
 ```{r}
 ### Color palettes
@@ -47,15 +47,24 @@ names(fsCols)<-c("20","10","5","2")
 
 ```{r}
 
-msAttrOA<-read_csv("runs/openAccess/farmEq_msAttrOALg.csv")
+msAttrOA<-read_csv("runs/openAccess/farmEq_msAttOALg.csv")
 # msAttrOAs<-read_csv("runs/aqMS/farmEq_msAttrOASm.csv") # 2 farms at 10 patches each
-msAttrOAxs<-read_csv("runs/openAccess/farmEq_msAttrOAXSm.csv") # 4 farms at 5 patches each
+msAttrOAxs<-read_csv("runs/openAccess/farmEq_msAttOAXSm.csv") # 4 farms at 5 patches each
 nullOA<-read_csv("runs/openAccess/nullOA.csv")
 # write_csv(nullOA,"runs/aqMS/nullOA.csv")
 
+zerosBm<-data.frame(mpaSize=0,
+                  attr=unique(msAttrOA$attr),
+                  biomass=1,
+                  catch=1,
+                  diffBm=1,
+                  diffCtch=1)
+
 msAttrOA2<-msAttrOA%>%
   mutate(diffBm=biomass/as.numeric(nullOA[1,"biomass"]),
-         diffCtch=catch/as.numeric(nullOA[1,"catch"]))
+         diffCtch=catch/as.numeric(nullOA[1,"catch"]))%>%
+  filter(mpaSize<0.5)%>%
+  bind_rows(.,zerosBm)
 
 # msAttrOAs2<-msAttrOAs%>%
 #   mutate(diffBm=biomass-as.numeric(nullOA[1,"biomass"]),
@@ -63,7 +72,9 @@ msAttrOA2<-msAttrOA%>%
 
 msAttrOAxs2<-msAttrOAxs%>%
   mutate(diffBm=biomass/as.numeric(nullOA[1,"biomass"]),
-         diffCtch=catch/as.numeric(nullOA[1,"catch"]))
+         diffCtch=catch/as.numeric(nullOA[1,"catch"]))%>%
+  filter(mpaSize<0.5)%>%
+  bind_rows(.,zerosBm)
 
 
 ##### Plots
@@ -71,8 +82,8 @@ sizeAttrBm<-ggplot(msAttrOA2,aes(x=mpaSize,y=diffBm*100,group=as.factor(attr),co
   geom_hline(yintercept = 100,color="gray66")+
   geom_smooth(size=0.8,se=FALSE)+
   labs(title = "",y="% biomass",x="total farm area\n(% of total range)")+
-  scale_y_continuous(limits = c(100,500))+
-  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_y_continuous(limits = c(95,370))+
+  scale_x_continuous(breaks = seq(0,0.4,by=0.1),labels = seq(0,0.4,by=0.1)*100)+
   scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
     theme(axis.text=element_text(size=12),
@@ -85,8 +96,8 @@ sizeAttrBmS<-ggplot()+ ## replaced sm with xsm to excentuate differences (smalle
   geom_hline(yintercept = 100,color="gray66")+
   geom_smooth(data=msAttrOAxs2,aes(x=mpaSize,y=diffBm*100,group=as.factor(attr),color=as.factor(attr)),size=0.8,se=FALSE)+
   labs(title = "",y="",x="total farm area\n(% of total range)")+
-  scale_y_continuous(limits = c(100,500))+
-  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_y_continuous(limits = c(95,370))+
+  scale_x_continuous(breaks = seq(0,0.4,by=0.1),labels = seq(0,0.4,by=0.1)*100)+
   scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
     theme(axis.text=element_text(size=12),
@@ -97,23 +108,25 @@ sizeAttrBmS<-ggplot()+ ## replaced sm with xsm to excentuate differences (smalle
 
 ##### CE
 
-msAttrCE<-read_csv("runs/constantEffortMSY/farmEq_msAttCE.csv")
-# msAttrOAs<-read_csv("runs/aqMS/farmEq_msAttrOASm.csv") # 2 farms at 10 patches each
-msAttrCExs<-read_csv("runs/constantEffortMSY/farmEq_msAttCEsm.csv") # 4 farms at 5 patches each
+msAttrCE<-read_csv("runs/constantEffortMSY/farmEq_msAttCELg.csv")
 
-nullCE<-read_csv("runs/constantEffortMSY/nullCE.csv")
+msAttrCExs<-read_csv("runs/constantEffortMSY/farmEq_msAttCEXsm.csv") # 4 farms at 5 patches each
+
+nullCE<-read_csv("runs/constantEffortMSY/nullCEmsy.csv")
 
 # nullCE<-read_csv("runs/aqMS/nullCE.csv")
 
 msAttrCE2<-msAttrCE%>%
   mutate(diffBm=biomass/as.numeric(nullCE[1,"biomass"]),
          diffCtch=catch/as.numeric(nullCE[1,"catch"]))%>%
-  filter(mpaSize<0.5)
+  filter(mpaSize<0.5)%>%
+  bind_rows(.,zerosBm)
 
 msAttrCExs2<-msAttrCExs%>%
   mutate(diffBm=biomass/as.numeric(nullCE[1,"biomass"]),
          diffCtch=catch/as.numeric(nullCE[1,"catch"]))%>%
-  filter(mpaSize<0.5)
+  filter(mpaSize<0.5)%>%
+  bind_rows(.,zerosBm)
 
 ### plot mpaSize by attraction
 
@@ -122,8 +135,8 @@ sizeAttrBmCE<-ggplot(msAttrCE2,aes(x=mpaSize,y=diffBm*100,group=as.factor(attr),
   geom_smooth(size=0.8,se=FALSE)+
   #geom_point()+
   labs(title = "One large farm",y="% biomass",x="")+
-  scale_y_continuous(limits = c(100,150))+
-  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_y_continuous(limits = c(95,370))+
+  scale_x_continuous(breaks = seq(0,0.4,by=0.1),labels = seq(0,0.4,by=0.1)*100)+
   scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
     theme(axis.text=element_text(size=12),
@@ -136,8 +149,8 @@ sizeAttrBmSce<-ggplot()+ ## replaced sm with xsm to excentuate differences (smal
   geom_hline(yintercept = 100,color="gray66")+
   geom_smooth(data=msAttrCExs2,aes(x=mpaSize,y=diffBm*100,group=as.factor(attr),color=as.factor(attr)),size=0.8,se=FALSE)+
   labs(title = "Several smaller farms",y="",x="")+
-  scale_y_continuous(limits = c(100,150))+
-  scale_x_continuous(breaks = seq(0.2,0.8,by=0.2),labels = seq(0.2,0.8,by=0.2)*100)+
+  scale_y_continuous(limits = c(95,370))+
+  scale_x_continuous(breaks = seq(0,0.4,by=0.1),labels = seq(0,0.4,by=0.1)*100)+
   scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
     theme(axis.text=element_text(size=12),
@@ -146,12 +159,12 @@ sizeAttrBmSce<-ggplot()+ ## replaced sm with xsm to excentuate differences (smal
         legend.title = element_text(size=16),
         plot.title = element_text(size=20))
 
-figS3quadBm<-(sizeAttrBmCE+sizeAttrBmSce)/(sizeAttrBm +sizeAttrBmS)+
+figS1quadBm<-(sizeAttrBmCE+sizeAttrBmSce)/(sizeAttrBm +sizeAttrBmS)+
   plot_layout(guides = "collect")+
   plot_annotation(tag_levels = "A")&
     theme(plot.tag = element_text(face = 'bold'))
 
-figS3quadBm
+figS1quadBm
 
 ```
 
@@ -159,7 +172,7 @@ figS3quadBm
 
 ## Figure S2
 
-Farm impacts over time for a high value open access fishery. In each plot the level of attraction is varied. Top plots represent one large farm at 20% total coverage (A, B), and the bottom plots represent the 20% farm area broken into several smaller farms (C, D). Biomass and catches are in relative to the base scenario with no farm (farm scenario/no farm scenario).
+Farm impacts over time for a **high value open access fishery**. In each plot the level of attraction is varied. Top plots represent one large farm at 20% total coverage (A, B), and the bottom plots represent the 20% farm area broken into several smaller farms (C, D). Biomass and catches are in relative to the base scenario with no farm (farm scenario/no farm scenario).
 
 
 ```{r}
@@ -175,9 +188,9 @@ attLg<-jattDat%>%
 diffBmOAJAtt<-ggplot(attLg[attLg$year>49,],aes(year, bmDiff*100,color=as.factor(run))) +
   geom_hline(yintercept=100,color="gray66")+
   geom_line(size=0.75)+
-    # scale_y_continuous(expand=c(0,0))+
-    scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
-  labs(x="Year",y="% Biomass",title="")+
+  scale_y_continuous(expand=c(0,0),limits = c(100,255))+
+  scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+   
+  labs(x="Year",y="One large farm\n\n% Biomass",title="")+
   scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
   theme(axis.text = element_text(size = 10),
@@ -186,7 +199,7 @@ diffBmOAJAtt<-ggplot(attLg[attLg$year>49,],aes(year, bmDiff*100,color=as.factor(
 diffCtchOAJAtt<-ggplot(attLg[attLg$year>49,],aes(year, ctchDiff*100,color=as.factor(run))) +
   geom_hline(yintercept=100,color="gray66")+  
   geom_line(size=0.75)+
-    # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
+    scale_y_continuous(expand=c(0,0),limits = c(60,130))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
     labs(x="year",y="% Catch",title = "")+
     scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
@@ -201,9 +214,9 @@ attSm<-jattDat%>%
 diffBmOAJAttS<-ggplot(attSm[attSm$year>49,],aes(year, bmDiff*100,color=as.factor(run))) +
     geom_hline(yintercept=100,color="gray66")+
     geom_line(size=0.75)+
-    # scale_y_continuous(expand=c(0,0))+
+    scale_y_continuous(expand=c(0,0),limits = c(100,255))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
-    labs(x="Year",y="% Biomass",title="")+
+    labs(x="Year",y="Small farms\n\n% Biomass",title="")+
     scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
     theme_bw()+
   theme(axis.text = element_text(size = 10),
@@ -212,7 +225,7 @@ diffBmOAJAttS<-ggplot(attSm[attSm$year>49,],aes(year, bmDiff*100,color=as.factor
 diffCtchOAJAttS<-ggplot(attSm[attSm$year>49,],aes(year, ctchDiff*100,color=as.factor(run))) +
   geom_hline(yintercept=100,color="gray66")+  
   geom_line(size=0.75)+
-    # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
+    scale_y_continuous(expand=c(0,0),limits = c(60,130))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
   labs(x="year",y="% Catch",title = "")+
   scale_color_manual(values = attrCols,name="Attraction",labels=c("None","Low","Moderate","High"))+
@@ -246,9 +259,9 @@ attLgCE<-jattDatCE%>%
 diffBmOAJAttCE<-ggplot(attLgCE[attLgCE$year>49,],aes(year, bmDiff*100,color=as.factor(run))) +
   geom_hline(yintercept=100,color="gray66")+
   geom_line(size=0.75)+
-    # scale_y_continuous(expand=c(0,0))+
+    scale_y_continuous(expand=c(0,0),limits = c(100,215))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
-  labs(x="Year",y="% Biomass",title="")+
+  labs(x="Year",y="One large farm\n\n% Biomass",title="")+
   scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
   theme_bw()+
   theme(axis.text = element_text(size = 10),
@@ -257,7 +270,7 @@ diffBmOAJAttCE<-ggplot(attLgCE[attLgCE$year>49,],aes(year, bmDiff*100,color=as.f
 diffCtchOAJAttCE<-ggplot(attLgCE[attLgCE$year>49,],aes(year, ctchDiff*100,color=as.factor(run))) +
   geom_hline(yintercept=100,color="gray66")+  
   geom_line(size=0.75)+
-    # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
+    scale_y_continuous(expand=c(0,0),limits = c(55,110))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
     labs(x="year",y="% Catch",title = "")+
     scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
@@ -272,9 +285,9 @@ attSmCE<-jattDatCE%>%
 diffBmOAJAttSCE<-ggplot(attSmCE[attSmCE$year>49,],aes(year, bmDiff*100,color=as.factor(run))) +
     geom_hline(yintercept=100,color="gray66")+
     geom_line(size=0.75)+
-    # scale_y_continuous(expand=c(0,0))+
+    scale_y_continuous(expand=c(0,0),limits = c(100,215))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
-    labs(x="Year",y="% Biomass",title="")+
+    labs(x="Year",y="Small farms\n\n% Biomass",title="")+
     scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
     theme_bw()+
   theme(axis.text = element_text(size = 10),
@@ -283,7 +296,7 @@ diffBmOAJAttSCE<-ggplot(attSmCE[attSmCE$year>49,],aes(year, bmDiff*100,color=as.
 diffCtchOAJAttSCE<-ggplot(attSmCE[attSmCE$year>49,],aes(year, ctchDiff*100,color=as.factor(run))) +
   geom_hline(yintercept=100,color="gray66")+  
   geom_line(size=0.75)+
-    # scale_y_continuous(breaks=c(-10000,-5000,0,5000),expand=c(0,0))+
+    scale_y_continuous(expand=c(0,0),limits = c(55,110))+
     scale_x_continuous(breaks=seq(50,100,by=10),labels=seq(0,50,by=10))+
   labs(x="year",y="% Catch",title = "")+
   scale_color_manual(values = attrCols, name="Attraction",labels=c("None","Low","Moderate","High"))+
@@ -306,7 +319,7 @@ diffCtchOAJAttSCE<-ggplot(attSmCE[attSmCE$year>49,],aes(year, ctchDiff*100,color
 Equilibrium differences in total biomass and catch biomass for different species based on adult movement for farm scenarios with very damaging effects on the wild population (damage > fishing mortality). Different farm designs are tested by farm size resulting in the indicated number of farms. 
 
 
-```{r fig.height=5}
+```{r fig.height=3}
 
 amFsOAnegKill<-read_csv("runs/openAccess/farmEq_amFsNegKill.csv")
 
@@ -348,7 +361,7 @@ amFsBmKill + amFsCtchKill +
 
 ## Figure S5
 
-Relative differences in total biomass compared to no farm over a range of total farm areas. Farms are all divided into several smaller farms. Farm scenarios with positive (A, C) and negative impacts to the wild population (C, D), under strong (A, B) and weak (B, D) fishery management. 
+Relative differences in total biomass compared to no farm over a range of total farm areas. Farms are all divided into several smaller farms. Farm scenarios with positive (A, C) and negative impacts to the wild population (B, D), under strong (A, B) and weak (C, D) fishery management. 
 
 ```{r}
 
@@ -380,9 +393,9 @@ szMgmtBen3<-szMgmtBen2%>%
 szMgmtBenBmOA<-ggplot(szMgmtBen3[szMgmtBen3$mgmt=="oa",],aes(x=mpaSz*100,y=diffBm*100,group=aMove,color=as.factor(aMove)))+
   geom_hline(yintercept = 100,color="gray66")+
   geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
-  scale_y_continuous(limits = c(0,400))+
-  labs(x="Total farm area",y="Open access\n\n% biomass",title = "")+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(50,300))+
+  labs(x="Total farm area",y="Weak mgmt\n\n% biomass",title = "")+
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5, size = 16),
         axis.text=element_text(size=12),
@@ -394,9 +407,9 @@ szMgmtBenBmOA<-ggplot(szMgmtBen3[szMgmtBen3$mgmt=="oa",],aes(x=mpaSz*100,y=diffB
 szMgmtBenBmCE<-ggplot(szMgmtBen3[szMgmtBen3$mgmt=="ce",],aes(x=mpaSz*100,y=diffBm*100,group=aMove,color=as.factor(aMove)))+
   geom_hline(yintercept = 100,color="gray66")+
   geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
-  scale_y_continuous(limits = c(0,400))+
-  labs(x="",y="Constant effort\n\n% biomass",title = "Positive impacts\n")+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(50,300))+
+  labs(x="",y="Strong mgmt\n\n% biomass",title = "Positive impacts\n")+
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5, size = 16),
         axis.text=element_text(size=12),
@@ -406,7 +419,7 @@ szMgmtBenBmCE<-ggplot(szMgmtBen3[szMgmtBen3$mgmt=="ce",],aes(x=mpaSz*100,y=diffB
 
 ```
 
-```{r fig.height=8}
+```{r}
 
 szMgmtNeg<-read_csv("runs/movement/farmEq_mpaMgmtAMNeg.csv")
 
@@ -417,16 +430,15 @@ szMgmtNeg2<-szMgmtNeg%>%
                           TRUE ~ catch/as.numeric(nullCE[1,"catch"])))
 
 szMgmtNeg3<-szMgmtNeg2%>%
-  bind_rows(.,zeros)%>%
-  filter(mpaSz<0.5)
+  bind_rows(.,zeros)
 
 
 szMgmtNegBmOA<-ggplot(szMgmtNeg3[szMgmtNeg3$mgmt=="oa",],aes(x=mpaSz*100,y=diffBm*100,group=aMove,color=as.factor(aMove)))+
   geom_hline(yintercept = 100,color="gray66")+
   #geom_smooth(size=0.8,se=FALSE)+#
   geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
-  scale_y_continuous(limits = c(0,400))+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(50,300))+
   labs(x="Total farm area",y="",title = "")+
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5, size = 16),
@@ -440,8 +452,8 @@ szMgmtNegBmCE<-ggplot(szMgmtNeg3[szMgmtNeg3$mgmt=="ce",],aes(x=mpaSz*100,y=diffB
   geom_hline(yintercept = 100,color="gray66")+
   #geom_smooth(size=0.8,se=FALSE)+
   geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
-  scale_y_continuous(limits = c(0,400))+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(50,300))+
   labs(x="",y="",title = "Negative impacts\n")+
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5, size = 16),
@@ -486,9 +498,9 @@ szMgmt0BmOA<-ggplot(szMgmt03[szMgmt03$mgmt=="oa",],aes(x=mpaSz*100,y=diffBm*100,
   geom_hline(yintercept = 100,color="gray66")+
   # geom_smooth(size=0.8,se=FALSE)+#
   geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
-  scale_y_continuous(limits = c(92,500))+
-  labs(x="Total farm area",y="Open access\n\n% biomass",title = "")+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(95,250))+
+  labs(x="Total farm area",y="weak mgmt\n\n% biomass",title = "")+
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5, size = 16),
         axis.text=element_text(size=12),
@@ -497,19 +509,19 @@ szMgmt0BmOA<-ggplot(szMgmt03[szMgmt03$mgmt=="oa",],aes(x=mpaSz*100,y=diffBm*100,
         legend.title = element_text(size=16))
 
 
-# szMgmt0CtchOA<-ggplot(szMgmt03[szMgmt03$mgmt=="oa",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
-#   geom_hline(yintercept = 100,color="gray66")+
-#   # geom_smooth(size=0.8,se=FALSE)+#
-#   geom_line(size=0.8)+
-#   # scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
-#   scale_y_continuous(limits = c(15,140))+
-#   labs(x="Total farm area",y="% catch",title = "")+
-#   theme_bw()+
-#   theme(plot.title = element_text(hjust = 0.5, size = 16),
-#         axis.text=element_text(size=12),
-#         axis.title = element_text(size=16),
-#         legend.text = element_text(size=12),
-#         legend.title = element_text(size=16))
+szMgmt0CtchOA<-ggplot(szMgmt03[szMgmt03$mgmt=="oa",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  # geom_smooth(size=0.8,se=FALSE)+#
+  geom_line(size=0.8)+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(50,140))+
+  labs(x="Total farm area",y="% catch",title = "")+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.text=element_text(size=12),
+        axis.title = element_text(size=16),
+        legend.text = element_text(size=12),
+        legend.title = element_text(size=16))
 
 # effort @ MSY
 
@@ -517,9 +529,9 @@ szMgmt0BmCE<-ggplot(szMgmt03[szMgmt03$mgmt=="ce",],aes(x=mpaSz*100,y=diffBm*100,
   geom_hline(yintercept = 100,color="gray66")+
   # geom_smooth(size=0.8,se=FALSE)+#
   geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
-  scale_y_continuous(limits = c(92,300))+
-  labs(x="",y="Constant effort\n\n% biomass",title = "Biomass")+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(95,250))+
+  labs(x="",y="Strong mgmt\n\n% biomass",title = "Biomass")+
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5, size = 16),
         axis.text=element_text(size=12),
@@ -532,8 +544,8 @@ szMgmt0CtchCE<-ggplot(szMgmt03[szMgmt03$mgmt=="ce",],aes(x=mpaSz*100,y=diffCtch*
   geom_hline(yintercept = 100,color="gray66")+
   # geom_smooth(size=0.8,se=FALSE)+#
   geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
-  scale_y_continuous(limits = c(15,140))+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(50,140))+
   labs(x="",y="% catch",title = "Catch")+
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5, size = 16),
@@ -548,5 +560,100 @@ figS6Plts<-((szMgmt0BmCE + szMgmt0CtchCE)/(szMgmt0BmOA + szMgmt0CtchOA )) +
 
 
 figS6Plts
+
+```
+
+\newpage
+
+## Figure S7
+
+Relative differences in total biomass (A, C) and catches (B, D) under strong (A, B) and weak (C, D) fishery management compared to no farm over a range of total farm areas. Farms are all divided into several smaller farms. Here farms have varying impacts on wild population natural mortality rates (0-20% negative impacts).
+
+
+```{r}
+
+szMgmtDMG<-read_csv("runs/movement/farmEq_mpaMgmtDmg.csv")
+
+szMgmtDMG2<-szMgmtDMG%>%
+  mutate(diffBm=case_when(mgmt == "oa" ~  biomass/as.numeric(nullOA[1,"biomass"]),
+                          TRUE ~ biomass/as.numeric(nullCE[1,"biomass"])))
+
+szMgmtDMG3<-szMgmtDMG2%>%
+  bind_rows(.,data.frame(mpaSz=0,
+                         damage=rep(c(1,1.05,1.1,1.15,1.2),2),
+                         mgmt=c(rep("oa",5),rep("ce",5)),
+                         biomass=NA,
+                         catch=NA,
+                         diffBm=1.0,
+                         ctchDiff=1.0))
+
+# open access
+
+szMgmtDmgBmOA<-ggplot(szMgmtDMG3[szMgmtDMG3$mgmt=="oa",],aes(x=mpaSz*100,y=diffBm*100,group=damage,color=as.factor(damage)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  # geom_smooth(size=0.8,se=FALSE)+#
+  geom_line(size=0.8)+
+  scale_color_viridis_d(name="Negative\nImpact",labels=c("0","5%","10%","15%","20%"),direction = -1)+
+  scale_y_continuous(limits = c(70,250))+
+  labs(x="Total farm area",y="Weak mgmt\n\n% biomass",title = "")+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.text=element_text(size=12),
+        axis.title = element_text(size=16),
+        legend.text = element_text(size=12),
+        legend.title = element_text(size=16))
+
+
+szMgmtDmgCtchOA<-ggplot(szMgmtDMG3[szMgmtDMG3$mgmt=="oa",],aes(x=mpaSz*100,y=ctchDiff*100,group=damage,color=as.factor(damage)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  # geom_smooth(size=0.8,se=FALSE)+#
+  geom_line(size=0.8)+
+  scale_color_viridis_d(name="Negative\nImpact",labels=c("0","5%","10%","15%","20%"),direction = -1)+
+  scale_y_continuous(limits = c(70,250))+
+  labs(x="Total farm area",y="Weak mgmt\n\n% catch",title = "")+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.text=element_text(size=12),
+        axis.title = element_text(size=16),
+        legend.text = element_text(size=12),
+        legend.title = element_text(size=16))
+
+### Constant effort
+
+szMgmtDmgBmCE<-ggplot(szMgmtDMG3[szMgmtDMG3$mgmt=="ce",],aes(x=mpaSz*100,y=diffBm*100,group=damage,color=as.factor(damage)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  # geom_smooth(size=0.8,se=FALSE)+#
+  geom_line(size=0.8)+
+  scale_color_viridis_d(name="Negative\nImpact",labels=c("0","5%","10%","15%","20%"),direction = -1)+
+  scale_y_continuous(limits = c(70,250))+
+  labs(x="Total farm area",y="Strong mgmt\n\n% biomass",title = "")+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.text=element_text(size=12),
+        axis.title = element_text(size=16),
+        legend.text = element_text(size=12),
+        legend.title = element_text(size=16))
+
+
+szMgmtDmgCtchCE<-ggplot(szMgmtDMG3[szMgmtDMG3$mgmt=="ce",],aes(x=mpaSz*100,y=ctchDiff*100,group=damage,color=as.factor(damage)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  # geom_smooth(size=0.8,se=FALSE)+#
+  geom_line(size=0.8)+
+  scale_color_viridis_d(name="Negative\nImpact",labels=c("0","5%","10%","15%","20%"),direction = -1)+
+  scale_y_continuous(limits = c(70,250))+
+  labs(x="Total farm area",y="Strong mgmt\n\n% catch",title = "")+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.text=element_text(size=12),
+        axis.title = element_text(size=16),
+        legend.text = element_text(size=12),
+        legend.title = element_text(size=16))
+
+
+figS7Plts<-((szMgmtDmgBmCE + szMgmtDmgCtchCE)/(szMgmtDmgBmOA + szMgmtDmgCtchOA )) +
+  plot_annotation(tag_levels = 'A') + 
+  plot_layout(guides="collect")
+
+figS7Plts
 
 ```
